--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>The Skibidis Game</title>
+    <title>The Skibidis Final Project</title>
 </head>
 <body>
     <h1>Skibidi Road</h1>
