made that shit centered king!

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>My Webpage</title>
 </head>
 <body>
+<div id="Instructions">
     <title>The Skibidis Final Project</title>
     <h1>Skibidi Road</h1>
-    <div>
         <img id="Skibidi" src="images/skibidi.png">
         <p style="font-family:verdana">
             Welcome to our game! Here's the Instructions: 
