--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p style="font-family:verdana">
             Welcome to our game! Here's the Instructions: 
             <br>
-            INSTRUCTIONS.....
+            Press the arrow keys to move across the road and avoid obstacles. Have fun and good luck!
         </p>
 
     </div>
