--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.min.js"></script>
     <link rel="stylesheet" href="/css/style.css"/>
-    <title>My Webpage</title>
+    <title>Skibidi</title>
 </head>
 <body>
 <div id="Instructions">
