--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <title>Skibidi</title>
 </head>
 <body>
+<div class="container">
+    <h1 class="neonText">
+        Skibidi Road
+    </h1>
+</div>
+<div class="container">
+    <h1 class="instructions">
+        Welcome to our game! Here's the Instructions:
+        <br>
+        Press the arrow keys to move across the road and avoid obstacles. Have fun and good luck!
+    </h1>
+</div>
+
 <div id="Instructions">
-    <title>The Skibidis Final Project</title>
-    <h1>Skibidi Road</h1>
-        <p style="font-family:verdana">
+    <div class="container">
+     </div>
+        <p style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
             Welcome to our game! Here's the Instructions: 
             <br>
             Press the arrow keys to move across the road and avoid obstacles. Have fun and good luck!
